--- a/GPA.css
+++ b/GPA.css
@@ -101,12 +101,7 @@ p {
     
   }
 #summitbtn{
-  position: relative;
-  left: 0; /* إعادة تعيين القيمة السابقة */
-  display: block;
-  margin: 20px auto 0; /* 20px للأعلى | auto للتوسيط الأفقي */
-  width: 80%; /* جعل الزر أوسع */
-  max-width: 200px; /* تحديد عرض أقصى */
+align-items: center;
 }
   input[type="number"],
   button {
